# ddl-shenanigans

./: .gitignore  .tool-versions  README.md  alembic.ini  pyproject.toml
src/ddl_shenanigans/: dbx.py  models.py
src/ddl_shenanigans/migrations/: env.py
