[project]
name = "ddl-shenanigans"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lee Trout", email = "lee@leetrout.com" }
]
dependencies = [
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "black>=24.4.2",
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ddl_shenanigans"]
